overflow fix on main page and new class for menu items in menu page

--- a/src/style.css
+++ b/src/style.css
@@ -11,6 +11,7 @@
 }
 
 .content {
+    overflow: auto;
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -89,6 +90,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
     margin-top: 40px;
     font-size: 20px;
 }
@@ -96,6 +98,16 @@
 .address #address-header {
     font-weight: bold;
     margin-bottom: 10px;
+}
+
+.menu {
+    display: grid;
+    grid-template-rows: repeat(auto-fit, minmax(250px, 350px));
+}
+
+.menu-item {
+    border: solid 2px black;
+    font-size: 33px;
 }
 
 @font-face {
